Bug 1881851 - Part 4: Give urlbar buttons an outline in prefers-contrast r=desktop-theme-reviewers,accessibility-frontend-reviewers,morgan,dao,urlbar-reviewers
Depends on D203695

Differential Revision: https://phabricator.services.mozilla.com/D203696

--- a/browser/themes/shared/identity-block/identity-block.css
+++ b/browser/themes/shared/identity-block/identity-block.css
@@ -29,29 +29,33 @@
   }
 }
 
-.identity-box-button:hover:not([open=true]),
-#tracking-protection-icon-container:hover:not([open=true]) {
-  background-color: var(--urlbar-box-hover-bgcolor);
-  color: var(--urlbar-box-hover-text-color);
-}
-
-.identity-box-button:hover:active,
-.identity-box-button[open=true],
-#tracking-protection-icon-container:hover:active,
-#tracking-protection-icon-container[open=true] {
-  background-color: var(--urlbar-box-active-bgcolor);
-  color: var(--urlbar-box-hover-text-color);
-}
-
-.identity-box-button:focus-visible,
-#tracking-protection-icon-container:focus-visible {
-  outline: var(--focus-outline);
-  outline-offset: var(--focus-outline-inset);
-}
-
 .identity-box-button {
   padding-inline: var(--urlbar-icon-padding);
   border-radius: var(--urlbar-icon-border-radius);
+}
+
+.identity-box-button,
+#tracking-protection-icon-container {
+  outline: var(--toolbarbutton-outline);
+  outline-offset: var(--toolbarbutton-outline-offset);
+
+  &:hover:not([open=true]) {
+    background-color: var(--urlbar-box-hover-bgcolor);
+    color: var(--urlbar-box-hover-text-color);
+    outline-color: var(--toolbarbutton-hover-outline-color);
+  }
+
+  &:hover:active,
+  &[open=true] {
+    background-color: var(--urlbar-box-active-bgcolor);
+    color: var(--urlbar-box-hover-text-color);
+    outline-color: var(--toolbarbutton-active-outline-color);
+  }
+
+  &:focus-visible {
+    outline: var(--focus-outline);
+    outline-offset: var(--focus-outline-inset);
+  }
 }
 
 #identity-icon-label {
@@ -154,8 +158,14 @@
   list-style-image: url(chrome://global/skin/icons/page-portrait.svg);
 }
 
-#identity-box[pageproxystate="invalid"] #identity-icon {
-  list-style-image: url(chrome://global/skin/icons/search-glass.svg);
+#identity-box[pageproxystate="invalid"] {
+  .identity-box-button {
+    outline: none;
+  }
+
+  #identity-icon {
+    list-style-image: url(chrome://global/skin/icons/search-glass.svg);
+  }
 }
 
 #urlbar[actiontype="extension"] > .urlbar-input-container > #identity-box #identity-icon {
